# vips-gmic

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  vips-gmic.cpp
